FIX: Modified some spacing issues

--- a/css/components/pages.css
+++ b/css/components/pages.css
@@ -24,8 +24,8 @@
 }
 
 .page {
-  height: 120vh;
-  padding: 14vh 4vw;
+  height: 105vh;
+  padding: 5vh 4vw;
   min-width: 320px;
 }
 
